# parallel-seq

./: .gitignore  EC2_DEPLOYMENT_COMPLETE.md  EC2_DEPLOYMENT_GUIDE.md  README.md  deploy_to_ec2.sh  linkedin-finder-key.pem  linkedin_email_finder.py  pyproject.toml  requirements.txt  sophia-followers.csv
.claude/: settings.local.json
